src/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  namespace: netology-homework
spec:
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
          - name: web-config
            mountPath: /etc/nginx/conf.d
      - name: multitool
        image: wbitt/network-multitool
        ports:
          - containerPort: 8080
      volumes:
        - name: web-config
          configMap:
            name: web-config
