src/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: netology-homework
spec:
  selector:
    app: web-app
  ports:
  - port: 80
    targetPort: 80
