src/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tlsingress
  labels:
    app.kubernetes.io/name: tlsingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: netology-homework
spec:
  tls:
    - hosts:
        - myapp.example.com
      secretName: tls-secret
  rules:
  - host: myapp.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-service
            port: 
              number: 80
